	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0
	iiblnd    - Infiniserv 3.3 + PathBits patch
	gmlnd     - GM 2.1.22 and later
	mxlnd     - MX 1.2.1 or later
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
       * bug fixes

Severity   : major
Frequency  : rare
Bugzilla   : 12455
Description: A race in kernel ptllnd between deleting a peer and posting
             new communications for it could hang communications -
	     manifesting as "Unexpectedly long timeout" messages.
	
Severity   : major
Frequency  : rare
Bugzilla   : 12432
Description: Kernel ptllnd lock ordering issue could hang a node.
	
Severity   : major
Frequency  : rare
Bugzilla   : 12016
Description: node crash on socket teardown race

Severity   : minor
Frequency  : 'lctl peer_list' issued on a mx net
Bugzilla   : 12237
Description: Enable lctl's peer_list for MXLND

Severity   : major
Frequency  : after Ptllnd timeouts and portals congestion
Bugzilla   : 11659
Description: Credit overflows
Details    : This was a bug in ptllnd connection establishment.  The fix
             implements better peer stamps to disambiguate connection
	     establishment and ensure both peers enter the credit flow
	     state machine consistently.

Severity   : major
Frequency  : rare	
Bugzilla   : 11394
Description: kptllnd didn't propagate some network errors up to LNET 
Details    : This bug was spotted while investigating 11394.  The fix
             ensures network errors on sends and bulk transfers are
	     propagated to LNET/lustre correctly.

Severity   : enhancement
Bugzilla   : 10316
Description: Fixed console chatter in case of -ETIMEDOUT.

Severity   : enhancement
Bugzilla   : 11684
Description: Added D_NETTRACE for recording network packet history
	     (initially only for ptllnd).  Also a separate userspace
	     ptllnd facility to gather history which should really be